Bug 1718119 - When emitting messages for display, start with a UTF-8 BOM. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D119844

--HG--
extra : rebase_source : 07816576b7b6f3bad2129b907f2c7aba9241de51